--- a/섹션4 완전탐색/멘토링.html
+++ b/섹션4 완전탐색/멘토링.html
@@ -13,10 +13,15 @@
           for (let j = 1; j <= n; j++) {
             let cnt = 0;
             for (let k = 0; k < m; k++) {
-              let pi = (pj = 0);
+              let pi = 0;
+              let pj = 0;
               for (let s = 0; s < n; s++) {
-                if (test[k][s] === i) pi = s;
-                if (test[k][s] === j) pj = s;
+                if (test[k][s] === i) {
+                  pi = s;
+                }
+                if (test[k][s] === j) {
+                  pj = s;
+                }
               }
               if (pi < pj) cnt++;
             }
@@ -32,6 +37,7 @@
         [3, 1, 4, 2],
       ];
       console.log(solution(arr));
+      //총 경우의 수 : 4*4 = 16가지
     </script>
   </body>
 </html>
