--- a/섹션4 완전탐색/k번째 큰수.html
+++ b/섹션4 완전탐색/k번째 큰수.html
@@ -7,17 +7,17 @@
     <script>
       function solution(n, k, card) {
         let answer;
-        let basket = [];
+        let basket = new Set();
         for (let i = 0; i < n; i++) {
           for (let j = i + 1; j < n; j++) {
             for (let k = j + 1; k < n; k++) {
               let sum = card[i] + card[j] + card[k];
-              basket.push(sum);
+              basket.add(sum);
               sum = 0;
             }
           }
         }
-        basket.sort((a, b) => b - a);
+        let a = Array.from(basket).sort((a, b) => b - a);
         answer = basket[k - 1];
 
         return answer;
