--- a/섹션5 효율성/두 배열 합치기.html
+++ b/섹션5 효율성/두 배열 합치기.html
@@ -6,17 +6,11 @@
   <body>
     <script>
       function solution(arr1, arr2) {
-        let answer = [];
+        let answer = [...arr1, ...arr2];
         let n = arr1.length;
         let m = arr2.length;
-        let p1 = 0;
-        let p2 = 0;
-        while (p1 < n && p2 < m) {
-          if (arr1[p1] <= arr2[p2]) answer.push(arr1[p1++]);
-          else answer.push(arr2[p2++]);
-        }
-        while (p1 < n) answer.push(arr1[p1++]);
-        while (p2 < m) answer.push(arr2[p2++]);
+
+        answer.sort((a, b) => a - b);
         return answer;
       }
 
