--- a/섹션5 효율성/아나그램.html
+++ b/섹션5 효율성/아나그램.html
@@ -5,28 +5,29 @@
   </head>
   <body>
     <script>
-      function solution(s) {
-        let answer;
+      function solution(str1, str2) {
+        let answer = "YES";
         let basket = new Map();
-        for (let x of s) {
+        for (let x of str1) {
           if (basket.has(x)) {
             basket.set(x, basket.get(x) + 1);
           } else {
             basket.set(x, 1);
           }
-          let max = 0;
-          for (let [key, value] of basket) {
-            if (value > max) {
-              max = value;
-              answer = key;
-            }
-          }
         }
+        for (let x of str2) {
+          if (!basket.has(x) || basket.get(x) == 0) {
+            return "NO";
+          }
+          basket.set(x, basket.get(x) - 1);
+        }
+
         return answer;
       }
 
-      let str = "BACBACCACCBDEDE";
-      console.log(solution(str));
+      let a = "AbaAeCe";
+      let b = "baeeACA";
+      console.log(solution(a, b));
     </script>
   </body>
 </html>
