--- a/섹션6 스택,큐/쇠막대기.html
+++ b/섹션6 스택,큐/쇠막대기.html
@@ -13,7 +13,7 @@
           if (s[i] === "(") {
             stack.push(s[i]);
           } else {
-            stack.pop(s[i]);
+            stack.pop();
             if (s[i - 1] === "(") {
               answer += stack.length;
             } else {
